--- a/static/workItemPage.html
+++ b/static/workItemPage.html
@@ -14,12 +14,13 @@
             usePlatformStyles: true
         });
     </script>
-    <div style="height: 100%; padding: 5px 5px 0 14px;">
+    <div style="height: 100%">
         <div style="border-bottom: 1px solid #eaeaea; height: 33px; padding: 5.8px 1px; margin-bottom: 5px; margin-left: 4px;">
             <p role="heading" aria-level="2" style="font-size: 16px; color: #333; font-weight: 600; display: inline;">Similar workitems</p>
         </div>
-        <!-- <button>Testbutton</button> -->
-        <div id="grid-container" style="width: 100%; height: 100%;"></div>
+        <div style="height: calc(100% - 33px); padding: 5px 5px 0 14px;">
+            <div id="grid-container" style="width: 100%; height: 100%"></div>
+        </div>
     </div>
     <script type="text/javascript">
         VSS.ready(function () {
